--- a/django_flex_reviews/templates/create_review.html
+++ b/django_flex_reviews/templates/create_review.html
@@ -1,3 +1,6 @@
+{% load django_vite %} {% vite_hmr_client %} {% vite_asset 'css/main.css.js' %}
+{% vite_asset 'js/form.ts' %}
+
 <form method="post">
   {% csrf_token %} {{ review_form.as_div }} {{
   strategy_forms.ebertstrategy_form.as_div }}
