add vue to django form template

--- a/django_flex_reviews/templates/base.html
+++ b/django_flex_reviews/templates/base.html
@@ -13,8 +13,22 @@
     </head>
 
     <body class="h-full">
-        {% block content %}
-        {% endblock content %}
+        <div class="py-10">
+            <header>
+                <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+                    <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900">
+                        {% block header %}
+                        {% endblock header %}
+                    </h1>
+                </div>
+            </header>
+            <main>
+                <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+                    {% block content %}
+                    {% endblock content %}
+                </div>
+            </main>
+        </div>
     </body>
 
 </html>
