--- a/django_flex_reviews/templates/create_review.html
+++ b/django_flex_reviews/templates/create_review.html
@@ -2,13 +2,13 @@
 
 {% load django_vite %}
 {% load widget_tweaks %}
+{% load tags %}
 
 {% block header %}
     Add a Review
 {% endblock header %}
 
 {% block content %}
-
     {% vite_asset 'css/main.css.js' %}
     {% vite_asset 'js/form.ts' %}
 
@@ -17,26 +17,24 @@
         <form method="post" class="space-y-8 divide-y divide-gray-200">
             <div class="space-y-8 divide-y divide-gray-200 sm:space-y-5">
                 {% csrf_token %}
-                [[message]]
                 {{ form.non_field_errors }}
                 {% for field in review_form %}
-                    {% if field.name == "strategy_content_type" %}
-                        {% include "common/form_field.html" with field=field|attr:"v-model:selectedStrategyId" %}
-                    {% else %}
-                        {% include "common/form_field.html" with field=field %}
+                    {% if field.name != "strategy_content_type" %}
+                        {% field_wrapper field %}
                     {% endif %}
                 {% endfor %}
-                Strategy is: [[selectedStrategyId]]<br/>
-                {% for strategy_id, strategy_form in strategy_forms.items %}
-                    <div v-show="{{strategy_id}} == selectedStrategyId">
-                        {% for field in strategy_form %}
-                            {% include "common/form_field.html" with field=field %}
-                        {% endfor %}
-                    </div>
-                {% endfor %}
+                <div class="sm:border-t sm:border-gray-200">
+                    {% field_wrapper field=review_form.strategy_content_type|attr:"v-model:selectedStrategyId" %}
+                    {% for strategy_id, strategy_form in strategy_forms.items %}
+                        <div v-show="{{strategy_id}} == selectedStrategyId">
+                            {% for field in strategy_form %}
+                                {% field_wrapper field border=false %}
+                            {% endfor %}
+                        </div>
+                    {% endfor %}
+                </div>
                 <input type="submit" value="Send message" />
             </div>
         </form>
     </div>
-
 {% endblock content %}
