add algolia-autocomplete to review_form

--- a/django_flex_reviews/templates/create_review.html
+++ b/django_flex_reviews/templates/create_review.html
@@ -10,10 +10,11 @@
 
 {% block content %}
     {% vite_asset 'css/main.css.js' %}
-    {% vite_asset 'js/form.ts' %}
+    {% vite_asset 'js/createReview.ts' %}
 
     {{review_form.fields.strategy_content_type.initial|json_script:"initialSelectedStrategyId"}}
-    {{review_form.fields.media_type_content_type.initial|json_script:"initialSelectedMediaTypeId"}}
+    {{review_form.fields.media_type_content_type.initial|json_script:"initialSelectedMediaTypeContentType"}}
+    {{review_form.fields.media_type_object_id.initial|json_script:"initialSelectedMediaTypeObjectId"}}
 
     <div id="review-form-vue-app">
         <form method="post" class="space-y-8 divide-y divide-gray-200">
@@ -26,9 +27,11 @@
                     {% field_wrapper review_form.completed_at_year border=false %}
                 </div>
                 <div class="sm:border-t sm:border-gray-200">
-                    {% field_wrapper review_form.media_type_content_type|attr:"v-model:selectedMediaTypeId" %}
+                    {% field_wrapper review_form.media_type_content_type|attr:"v-model:selectedMediaTypeContentType" %}
                     {% for media_type_id, media_type_form in media_type_forms.items %}
-                        <div v-show="{{media_type_id}} == selectedMediaTypeId">
+                        <div v-show="{{media_type_id}} == selectedMediaTypeContentType">
+                            <div>You have chosen: [[selectedMediaTypeObjectId]]</div>
+                            {% field_wrapper review_form.media_type_object_id|attr:"v-model:selectedMediaTypeObjectId" field_type="algolia_autocomplete" border=False %}
                             {% for field in media_type_form %}
                                 {% field_wrapper field border=false %}
                             {% endfor %}
@@ -46,7 +49,7 @@
                     {% endfor %}
                     {% field_wrapper field=review_form.text border=false %}
                 </div>
-                <input type="submit" value="Send message" />
+                <input type="submit" value="Submit Review" />
             </div>
         </form>
     </div>
