create radio_cards from django form ChoiceField

--- a/django_flex_reviews/templates/common/field_wrapper.html
+++ b/django_flex_reviews/templates/common/field_wrapper.html
@@ -1,4 +1,6 @@
 {% load widget_tweaks %}
+{% load tags %}
+
 
 {% if field_type == "radioselect" %}
     {% include "common/radioselect_field_wrapper.html" with field=field %}
@@ -17,6 +19,12 @@
                 {% elif field_type == "algolia_autocomplete" %}
                     {{ field|attr:"type:hidden" }}
                     <div id="media-type-autocomplete"></div>
+                {% elif field_type == "radio_cards" %}
+                    {{field|field_to_dict|vue_json_script:radio_cards_json_script_id}}
+                    <radio-cards
+                        json-script-id={{radio_cards_json_script_id}}
+                    >
+                    </radio-cards>
                 {% else %}
                     {{ field|add_class:"block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:max-w-xs sm:text-sm" }}
                 {% endif %}
