connect RadioCards v-model to pinia store

--- a/django_flex_reviews/templates/create_review.html
+++ b/django_flex_reviews/templates/create_review.html
@@ -28,12 +28,12 @@
                     {% field_wrapper review_form.completed_at_year border=false %}
                 </div>
                 <div class="sm:border-t sm:border-gray-200">
-                    {% field_wrapper review_form.media_type_content_type|attr:"v-model:store.selectedMediaTypeContentType" field_type="radio_cards" %}
-                    <div>You have chosen: [[store.selectedMediaTypeObjectId]]</div>
+                    {% field_wrapper review_form.media_type_content_type state_key="selectedMediaTypeContentType" field_type="radio_cards" %}
+                    <div>Selected MediaType: [[store.selectedMediaTypeContentType]]</div>
                     {% for media_type_id, media_type_form in media_type_forms.items %}
                         <div v-show="{{media_type_id}} == store.selectedMediaTypeContentType">
                             <div id="autocomplete-vue-app"></div>
-                            <div>You have chosen: [[store.selectedMediaTypeObjectId]]</div>
+                            <div>Selected MediaType ObjectId: [[store.selectedMediaTypeObjectId]]</div>
                             {% comment %} {% field_wrapper review_form.media_type_object_id|attr:"v-model:selectedMediaTypeObjectId" field_type="algolia_autocomplete" border=False %} {% endcomment %}
                             {% for field in media_type_form %}
                                 {% field_wrapper field border=false %}
