--- a/django_flex_reviews/templates/common/field_wrapper.html
+++ b/django_flex_reviews/templates/common/field_wrapper.html
@@ -23,6 +23,7 @@
                     {{field|field_to_dict|vue_json_script:radio_cards_json_script_id}}
                     <radio-cards
                         json-script-id={{radio_cards_json_script_id}}
+                        state-key={{state_key}}
                     >
                     </radio-cards>
                 {% else %}
