improve ui for completed_at date fields

--- a/django_flex_reviews/templates/django_flex_reviews/_field_wrapper.html
+++ b/django_flex_reviews/templates/django_flex_reviews/_field_wrapper.html
@@ -3,7 +3,7 @@
 
 
 {% if field_type == "radioselect" %}
-    {% include "common/radioselect_field_wrapper.html" with field=field %}
+    {% include "django_flex_reviews/_radioselect_field_wrapper.html" with field=field %}
 {% else %}
     <div class="space-y-6 sm:space-y-5">
         <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:pt-5 {% if border %} sm:border-t sm:border-gray-200 {% endif %}">
@@ -23,7 +23,7 @@
                     </label>
                 {% endif %}
                 {% if field_type == "number" %}
-                    {{ field|add_class:"mt-1 block w-full rounded-md border-gray-300 py-2 pl-3 pr-10 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" }}
+                    {{ field|add_class:"mt-1 block w-fit rounded-md border-gray-300 py-2 pl-3 text-base focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm" }}
                 {% elif field_type == "textarea" %}
                     {{ field|add_class:"block w-full max-w-lg rounded-md border-0 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:py-1.5 sm:text-sm sm:leading-6" }}
                 {% elif field_type == "algolia_autocomplete" %}
