--- a/django_flex_reviews/static/css/main.css
+++ b/django_flex_reviews/static/css/main.css
@@ -1,3 +1,4 @@
-body {
-  /* @apply bg-yellow-300; */
+/* Overwrite django's errorlist class styling. */
+.errorlist {
+  @apply mb-2 text-sm text-red-600;
 }
