--- a/django_flex_reviews/templates/django_flex_reviews/base.html
+++ b/django_flex_reviews/templates/django_flex_reviews/base.html
@@ -13,9 +13,16 @@
     </head>
 
     <body class="h-full">
-        <div class="py-10">
+        <div class="py-10 mx-auto max-w-7xl sm:px-6 lg:px-8">
+            {% if messages %}
+                <ul class="messages pb-5">
+                    {% for message in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
             <header>
-                <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+                <div>
                     <h1 class="text-3xl font-bold leading-tight tracking-tight text-gray-900">
                         {% block header %}
                         {% endblock header %}
@@ -23,7 +30,7 @@
                 </div>
             </header>
             <main>
-                <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+                <div>
                     {% block content %}
                     {% endblock content %}
                 </div>
