--- a/django_flex_reviews/templates/django_flex_reviews/create_review.html
+++ b/django_flex_reviews/templates/django_flex_reviews/create_review.html
@@ -29,8 +29,10 @@
 
                 {% comment %} Handle MediaType Selection {% endcomment %}
                 <div class="sm:border-t sm:border-gray-200">
-                    <div>Selected MediaType: [[store.selectedMediaTypeContentType]]</div>
-                    <div>Selected MediaType ObjectId: [[store.selectedMediaTypeObjectId]]</div>
+                    {% comment %}
+                        <div>Selected MediaType: [[store.selectedMediaTypeContentType]]</div>
+                        <div>Selected MediaType ObjectId: [[store.selectedMediaTypeObjectId]]</div>
+                    {% endcomment %}
                     {% field_wrapper review_form.media_type_content_type state_key="selectedMediaTypeContentType" field_type="radio_cards" %}
                     <div v-show="store.selectedMediaTypeContentType">
                         {% field_wrapper review_mgmt_form.create_new_media_type_object state_key="createNewMediaTypeObject" field_type="radio_cards" border=False %}
@@ -102,7 +104,7 @@
                     </div>
                 </fieldset>
 
-                {% comment %} Handle Rating Schema for Review {% endcomment %}
+                {% comment %} Handle Rating Strategy {% endcomment %}
                 <div class="sm:border-t sm:border-gray-200">
                     {% field_wrapper field=review_form.strategy_content_type|attr:"v-model:store.selectedStrategyId" %}
                     {% for strategy_id, strategy_form in strategy_forms.items %}
@@ -115,6 +117,7 @@
                     {% field_wrapper field=review_form.text border=false %}
                 </div>
 
+                {% comment %} Submit {% endcomment %}
                 <div class="pt-5">
                     <div class="flex justify-start">
                         <input type="submit" class="cursor-pointer ml-3 inline-flex justify-center rounded-md bg-indigo-600 py-2 px-3 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" value="Submit Review"/>
